--- a/config/dua_tf_server.yaml
+++ b/config/dua_tf_server.yaml
@@ -1,3 +1,11 @@
+# ########## TF Server ##########
 /dua_tf_server:
   ros__parameters:
-    use_sim_time: true
+    use_sim_time: false
+    pose_period: 100
+    source_frames:
+      - dottorcane/odom
+      - dottorcane/base_link
+    target_frame:
+      - map
+      - map
