--- a/config/dua_tf_server.yaml
+++ b/config/dua_tf_server.yaml
@@ -6,6 +6,6 @@
     source_frames:
       - dottorcane/odom
       - dottorcane/base_link
-    target_frame:
+    target_frames:
       - map
       - map
