fix: after review
@alessandrotenaglia the launch file is meant to be included in other launch files when one does not want to load the node as a component in some container elsewhere (may happen, has happened). Thus, make sure to have a namespace launch argument (these can be configured from other launch files) and do not create a component container for a single node, just start a process.

--- a/config/dua_tf_server.yaml
+++ b/config/dua_tf_server.yaml
@@ -4,6 +4,6 @@
     use_sim_time: false
     pose_period: 100
     source_frames:
-      - dottorcane/base_link
+      - base_link
     target_frames:
       - map
