--- a/config/dua_tf_server.yaml
+++ b/config/dua_tf_server.yaml
@@ -1,9 +1,9 @@
 /dua_tf_server:
   ros__parameters:
+    use_sim_time: false
     fixed_frame: map
-    pose_period: 100
+    poses_pub_period: 100
     source_frames:
       - base_link
     target_frames:
       - map
-    use_sim_time: false
