--- a/config/dua_tf_server.yaml
+++ b/config/dua_tf_server.yaml
@@ -1,9 +1,14 @@
 /dua_tf_server:
   ros__parameters:
-    use_sim_time: false
+    dua:
+      tf_server:
+        get_transform: false
+        transform_pose: false
+        wait_servers: false
     fixed_frame: map
     poses_pub_period: 100
     source_frames:
       - base_link
     target_frames:
       - map
+    use_sim_time: false
